package com.abcmart.shoestore.tool;

public enum CreditCardType {

    SHINHAN,
    SAMSUNG,
    KB_KOOKMIN,
    HYUNDAI,
    LOTTE,
    WOORI,
    HANA,
    BC
    ;

}
